2015-07-23  Gregory Soyez  <soyez@fastjet.fr>

	* post-process.sh:
	added an extra entry in the HTML summary table that lists the
	variants present for each generator

	* post-process.sh:
	* style-modulations.plot:
	* style-separation.plot:
	* style-variations.plot:     *** ADDED ***
	adapted the style files (and the script) so that the plots can be
	understood outside of the context of the webpages

2015-07-21  Jesse Thaler  <jthaler@mit.edu>

	* lh2015_qg.tex:
	. Adding some parton-level figures

	* tex-post-process.sh  *** ADDED ***
	. New script to copy files to tex/figures

2015-07-20  Jesse Thaler  <jthaler@mit.edu>

	* lh2015_qg.tex:
	. Putting in more information about generalized angularities
	. Putting in placeholder plots

2015-07-10  Jesse Thaler  <jthaler@mit.edu>

	* lh2015_qg.tex:
	. Tiny changes, but wanted to upload before going on vacation.


2015-06-26  Gregory Soyez  <soyez@fastjet.fr>

	* post-process.sh:
	. fixed a few typos
	. generate a plot/index.html file for easier navigation

2015-06-25  Gregory Soyez  <soyez@fastjet.fr>

	* README.md:
	various updated, included a contents table and status info

	* post-process.sh:
	process things separately for the hadron and parton-level results
	Note that this changes the output names for the plots

	Other (smaller) modifications:
	. do not plot individual MC variations if they only contain a single curve
	. revamped a few comments

	* produce-Qdependence-data.py:
	* produce-alphadependence-data.py:
	read the results in the hadron or parto directory instead of "result"

2015-06-16  Jesse Thaler  <jthaler@mit.edu>

	* lh2015_qg.tex:
	Starting to write quark/gluon manifesto, draft paper outline.

2015-06-09  Gregory Soyez  <soyez@fastjet.fr>

	* get-separation.sh:
	returned a "0" separation when the file is not present

	* produce-alphadependence-data.py:
	added the 0.9 and 1.1 factors

	* style-modulations.plot:
	fixed a typo causing issues with alpha_s-dependence plots

	* post-process.sh: